# ProyectoCP_2025_2026

./: .gitignore  CMakeLists.txt  FingerPrintImage.h  GestorArchivos.h  README.md  main.cpp
src/: BufferImage.h  Minutia.h  TratamientoImagenes.h  ZhangSuen.h
